--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ markdown: kramdown
 url: "https://jessekelighine.com"
 baseurl: "/confucianism-potpourri"
 permalink: /:year/:month/:day/:title/
+plugins:
+  - jekyll-feed
